--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
 
 					<div class="row">
 						<div class="col-md-12 text-center">
-							<h2>Информационные партёнры</h2>
+							<h2>Информационные партнеры</h2>
 						</div>
 					</div>
 					<div class="text-center info-partners">
