--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 							</div>
 
 							<div class="alert alert-success" role="alert">
-								<strong class="pull-left">ОТВЕТ:</strong> Нет! В первую очередь хакатон проводится для IT-разработчиков, но если вы дизайнер интерефейсов, продакт или проджект менеджер в IT-проектах, то ваша помощь тоже пригодится.
+								<strong class="pull-left">ОТВЕТ:</strong> Нет! В первую очередь хакатон проводится для программистов, но если вы дизайнер интерефейсов, продакт или проджект менеджер в IT-проектах, то ваша помощь тоже пригодится.
 							</div>
 
 							<div class="alert alert-info" role="alert">
@@ -388,8 +388,8 @@
 							<img src="assets/img/partners/logo-zaton.png" class="img-responsive" alt="Responsive image">
 						</a>
 
-						<a href="http://rt.ru/" target="_blank">
-							<img src="assets/img/partners/rostel.png" class="img-responsive" alt="Responsive image">
+						<a href="http://hh.ru/" target="_blank">
+							<img src="assets/img/partners/hh.png" class="img-responsive" alt="Responsive image">
 						</a>
 
 						
