ссылки на open data
ссылки на open data

--- a/index.html
+++ b/index.html
@@ -184,13 +184,8 @@
 
 					  	<div class="col-md-6">
 		    	        	<h4><strong>Открытые данные Астраханской области</strong></h4>
-					        <p>Все органы власти обязаны раскрывать информацию о своей деятельности. В Астраханской области данные раскрываются на двух крупных порталах:</p>	
-					        <ul>
-					        	<li>Официальный портал Астраханской области (<a href="" target="_blank">31 набор данных</a>)</li>
-					        	<li>
-					        		Сайт Администрации Астрахани (<a href="" target="_blank">24 набора данных</a>)
-				        		</li>
-				        	</ul>
+					        <p>Все органы власти обязаны раскрывать информацию о своей деятельности. В Астраханской области данные раскрываются на крупных порталах.</p>	
+					    
 					  	</div>
 					</div>
 					<br><br>
@@ -210,6 +205,37 @@
 					        	<li>
 					        		<a href="http://data.gov.ru/" target="_blank">Портал открытых данных</a>
 				        		</li>
+
+					        	<li>
+					        		<a href="http://bus.gov.ru/pub/open-data" target="_blank">Официальный портал для размещения информации о государственных (муниципальных) учреждениях</a>
+				        		</li>
+
+								<li>
+					        		<a href="https://fedstat.ru/" target="_blank">Портал государственной статистика</a>
+				        		</li>
+
+	        					<li>
+					        		<a href="https://dom.gosuslugi.ru/" target="_blank">Портал ФГИС ЖКХ</a>
+				        		</li>
+    				        	<li>
+					        		<a href="http://www.eias.ru/" target="_blank">Портал  ЕИАС ФСТ</a>
+				        		</li>
+    				        	<li>
+					        		<a href="https://sudrf.ru/" target="_blank">ГАС РФ «Правосудие»</a>
+				        		</li>
+
+					        	<li>
+					        		<a href="https://безопасныедороги.рф/opendata" target="_blank">Портал безопасные дороги</a>
+				        		</li>
+
+					        	<li>
+					        		<a href="https://дорфонд.рф/" target="_blank">Портал контроля дорожных фондов статистики</a>
+				        		</li>
+    				
+        						<li>
+					        		<a href="https://portal.audit.gov.ru/opendata" target="_blank">Портал государственного и муниципального финансового аудита</a>
+				        		</li>
+
 					        	<li>
 					        		<a href="http://read.infometer.org/opendata_sources" target="_blank">Инфометр</a>
 				        		</li>
