--- a/index.html
+++ b/index.html
@@ -406,6 +406,10 @@
 							<img src="assets/img/partners/best.png" class="img-responsive" alt="Responsive image">
 						</a>
 
+						<a href="https://webmechanic.ru/" target="_blank">
+							<img src="assets/img/partners/webmechanic.png" class="img-responsive" alt="Responsive image">
+						</a>
+
 						<a href="https://www.sberbank.ru" target="_blank">
 							<img src="assets/img/partners/sberbank.png" class="img-responsive" alt="Responsive image">
 						</a>
