--- a/index.html
+++ b/index.html
@@ -410,21 +410,28 @@
 							<img src="assets/img/partners/webmechanic.png" class="img-responsive" alt="Responsive image">
 						</a>
 
+						<a href="http://snrd.ru/" target="_blank">
+							<img src="assets/img/partners/adeptik.png" class="img-responsive" alt="Responsive image">
+						</a>
+
 						<a href="https://www.sberbank.ru" target="_blank">
 							<img src="assets/img/partners/sberbank.png" class="img-responsive" alt="Responsive image">
 						</a>
 
-						<a href="http://zolotoy-zaton.ru/" target="_blank">
-							<img src="assets/img/partners/logo-zaton.png" class="img-responsive" alt="Responsive image">
+						<a href="http://delitec.ru" target="_blank">
+							<img src="assets/img/partners/delitec.png" class="img-responsive" alt="Responsive image">
 						</a>
 
 						<a href="http://hh.ru/" target="_blank">
 							<img src="assets/img/partners/hh.png" class="img-responsive" alt="Responsive image">
 						</a>
 
-						
-						<a href="http://delitec.ru" target="_blank">
-							<img src="assets/img/partners/delitec.png" class="img-responsive" alt="Responsive image">
+						<a href="http://schooltech.ru/" target="_blank">
+							<img src="assets/img/partners/rsht.png" class="img-responsive" alt="Responsive image">
+						</a>
+
+						<a href="http://zolotoy-zaton.ru/" target="_blank">
+							<img src="assets/img/partners/logo-zaton.png" class="img-responsive" alt="Responsive image">
 						</a>
 
 						<a href="http://open.gov.ru/" target="_blank">
