--- a/index.html
+++ b/index.html
@@ -431,6 +431,10 @@
 							<img src="assets/img/partners/rarus.png" class="img-responsive" alt="Responsive image">
 						</a>
 
+						<a href="https://www.megafon.ru/" target="_blank">
+							<img src="assets/img/partners/megafon.png" class="img-responsive" alt="Responsive image">
+						</a>
+
 						<a href="http://schooltech.ru/" target="_blank">
 							<img src="assets/img/partners/rsht.png" class="img-responsive" alt="Responsive image">
 						</a>
