--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
 									Зарегистрироваться
 									<div class="ripple-container"></div>
 								</a>
+								<a  href="assets/tasks.pdf" target="_blank" class="btn btn-primay">
+									Задания от партнёров
+									<div class="ripple-container"></div>
+								</a>
 							</div>
 						</div>
 					</div>
