--- a/index.html
+++ b/index.html
@@ -94,7 +94,11 @@
 									Зарегистрироваться
 									<div class="ripple-container"></div>
 								</a>
-								<a  href="assets/tasks.pdf" target="_blank" class="btn btn-primay">
+								<a  href="assets/pres.pptx" target="_blank" class="btn btn-warning">
+									Презентация на защиту
+									<div class="ripple-container"></div>
+								</a>
+								<a  href="assets/tasks.pdf" target="_blank" class="btn btn-danger">
 									Задания от партнёров
 									<div class="ripple-container"></div>
 								</a>
